Fixed spacings in header.

--- a/css/datagrid/datagrid.css
+++ b/css/datagrid/datagrid.css
@@ -145,6 +145,7 @@
     display: block;
     overflow: hidden;
     text-overflow: ellipsis;
+    margin: 0;
     padding-left: 3px;
     -webkit-user-select: none; /* Safari */
     -ms-user-select: none; /* IE 10 and IE 11 */
